Main Menu buttons
Changed credits and quit buttons to be the new ones.
Didn't change their image sizes since this seemed to crash the game idk.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1875,7 +1875,7 @@ TextureEditor.LastCompileMethod=Unknown
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Render Transform.RenderTransform\" "
 None=======
 None=======
 None=======
@@ -1893,8 +1893,8 @@ None=======
 None=======
 None=======
 SpringArmComponent="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 CameraComponent="\"Object\" "
 SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
@@ -2147,8 +2147,8 @@ BP_Rat_Screw_Game_Manager_C="\"Object\" "
 MegascansMaterialParentSettings="\"Object\" "
 W_Winner_C="\"Object\" "
 UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Render Transform.RenderTransform\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 AssetViewerSettings="\"Object\" "
@@ -2172,7 +2172,7 @@ WidgetComponent="\"Object\" "
 WidgetComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 WBP_FaceCardPlayed_C="\"Object\" "
@@ -2421,6 +2421,7 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2432,7 +2433,6 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2452,29 +2452,21 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/UI/Diegetic/Menus/WBP_Main_Menu.WBP_Main_Menu
-OpenAssetsAtExit=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat.BP_Leading_Cat
-OpenAssetsAtExit=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager
-OpenAssetsAtExit=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind.BPC_NPC_Decision_Mind
-OpenAssetsAtExit=/Game/UI/Diegetic/Main_Games/WBP_Current_Turn.WBP_Current_Turn
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
 OpenAssetsAtExit=/Game/UI/Diegetic/Menus/BP_Main_Menu.BP_Main_Menu
-OpenAssetsAtExit=/Game/UI/Diegetic/Menus/WBP_Options.WBP_Options
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Diegetic/Menus/WBP_Options
-MRUItem1=/Game/UI/Diegetic/Menus/BP_Main_Menu
-MRUItem2=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem3=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem4=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem5=/Game/UI/Diegetic/Main_Games/WBP_Current_Turn
-MRUItem6=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
-MRUItem7=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem8=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem9=/Game/Maps/Main_Level/Main_Level
-MRUItem10=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
-MRUItem11=/Game/UI/Diegetic/Menus/WBP_Main_Menu
+MRUItem0=/Game/UI/Diegetic/Menus/BP_Main_Menu
+MRUItem1=/Game/UI/Diegetic/Menus/WBP_Main_Menu
+MRUItem2=/Game/UI/Diegetic/Menus/WBP_Options
+MRUItem3=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem4=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem5=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem6=/Game/UI/Diegetic/Main_Games/WBP_Current_Turn
+MRUItem7=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
+MRUItem8=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem9=/Game/Maps/Test_Level/ThirdPersonMap
+MRUItem10=/Game/Maps/Main_Level/Main_Level
+MRUItem11=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
 MRUItem12=/Game/Modes_Instances/Modes/GM_Bar
 MRUItem13=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
 MRUItem14=/Game/NPCs/Models/Dante_v2/Dante_export_UE_Skeleton
