Dante's texture and materials update

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -187,7 +187,7 @@ MRUItem6=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move Forward / Backward,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move Forward / Backward,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move Forward / Backward,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
@@ -687,7 +687,7 @@ ContentBrowserTab1.SelectedPaths=/Game/NPCs/Decision_Making
 ContentBrowserTab1.SelectedPaths=/Game/Main_Game_Managers/Rat_Screw
 ContentBrowserTab1.SelectedPaths=/Game/Environment/Street_Assets/Textures/graffiti
 ContentBrowserTab1.SelectedPaths=/Game/Maps/Main_Level
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/NPCs/Models/Dante_v2/Textures
 None=======
 None=======
 None=======
@@ -730,7 +730,7 @@ ContentBrowserTab2.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab2.SelectedPaths=/Game/NPCs/Models/Dante_v2/Materials
+ContentBrowserTab2.SelectedPaths=/Game/NPCs
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 AssetPropertyPicker.ThumbnailSize=2
@@ -791,9 +791,28 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
+ContentBrowserTab3.SourcesExpanded=True
+ContentBrowserTab3.FavoritesAreaExpanded=False
+ContentBrowserTab3.PathAreaExpanded=True
+ContentBrowserTab3.CollectionAreaExpanded=False
+ContentBrowserTab3.FavoritesSearchAreaExpanded=False
+ContentBrowserTab3.PathSearchAreaExpanded=False
+ContentBrowserTab3.CollectionSearchAreaExpanded=False
+ContentBrowserTab3.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab3.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab3.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab3.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab3.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab3.SelectedPaths=/Game/NPCs/Models/Dante_v2/Textures
+ContentBrowserTab3.PluginFilters=
+ContentBrowserTab3.Favorites.SelectedPaths=
+ContentBrowserTab3.SelectedCollections=
+ContentBrowserTab3.ExpandedCollections=
+ContentBrowserTab3.ThumbnailSize=2
+ContentBrowserTab3.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Level/Main_Level
+LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -2421,7 +2440,7 @@ WBP_Game_Win_Loss_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 BlockingVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 None=======
 None=======
@@ -2474,11 +2493,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/NPCs/Models/Dante_v2/Materials/MM_Dante_Clothes.MM_Dante_Clothes
-OpenAssetsAtExit=/Game/NPCs/Models/Dante_v2/Dante_export_UE.Dante_export_UE
-OpenAssetsAtExit=/Game/NPCs/Models/Dante_v2/Dante_export_UE_Skeleton.Dante_export_UE_Skeleton
-OpenAssetsAtExit=/Game/NPCs/Models/Dante_v2/Materials/MI_Dante_Skin.MI_Dante_Skin
-OpenAssetsAtExit=/Game/Environment/Bar_Assets/Materials/MI_Prop_05.MI_Prop_05
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/NPCs/Models/Dante_v2/Materials/MI_Dante_Misc
@@ -6162,11 +6176,11 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 ScreenPosition=X=2237.000 Y=213.000
 ScreenPosition=X=104.800 Y=36.800
 ScreenPosition=X=2108.000 Y=125.000
-ScreenPosition=X=94.000 Y=10.000
+ScreenPosition=X=93.600 Y=9.600
 None=======
 None=======
 None=======
-WindowSize=X=1295.000 Y=897.000
+WindowSize=X=1296.800 Y=898.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -6198,8 +6212,8 @@ Project=C:/Program Files/Epic Games/UE_5.3/
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Unreal/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Users/harry/Downloads/Dante_test_ctrl_rig.py
 RecentsFiles=E:/UE5/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
