NPC animation choosing for dialogue fixed I think. Changed end notify positions so hopefully fixed them all when spamming do dialogue function. NPC KEEPS CRASHING IDK WHY.
NPC animation not getting random twice for sound cue so synced properly with animation now.

Changed the positioning of every end dialogue notify for all dante dialogue animations so shouldnt be bugs with spamming do dialogue function hopefully.

All dialogue states also reset on entry now as well.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -697,7 +697,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Main_Game_Managers/Rat_Screw
 ContentBrowserTab1.SelectedPaths=/Game/Environment/Street_Assets/Textures/graffiti
 ContentBrowserTab1.SelectedPaths=/Game/Maps/Main_Level
 ContentBrowserTab1.SelectedPaths=/Game/NPCs/Models/Dante_v2/Textures
-ContentBrowserTab1.SelectedPaths=/Game/NPCs/Animations/Assets/Dante
+ContentBrowserTab1.SelectedPaths=/Game/NPCs/Animations/Assets/Dante/Dialogue
 None=======
 None=======
 None=======
@@ -2091,7 +2091,7 @@ K2Node_StructMemberGet="\"Object\" "
 K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 K2Node="\"Object\" "
-EdGraphNode="\"Object\" \"Object.Comment.CommentColor\" "
+EdGraphNode="\"Object\" "
 DataTable="\"Object\" "
 EdGraphNode_Comment="\"Object\" \"Object.Comment.CommentColor\" "
 BPC_CurrentHand_C="\"Object\" "
@@ -2487,68 +2487,71 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
+OpenAssetsAtExit=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC.ABP_NPC
+OpenAssetsAtExit=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia.Dante_66_to_Zilia
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem1=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem2=/Game/Player/BP_Player
-MRUItem3=/Game/NPCs/BP_NPC
-MRUItem4=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
-MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
-MRUItem6=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
-MRUItem7=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_3_to_Biel
-MRUItem8=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_2_to_Biel
-MRUItem9=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_108_to_Biel
-MRUItem10=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_123
-MRUItem11=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_120
-MRUItem12=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_119
-MRUItem13=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_117
-MRUItem14=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_116
-MRUItem15=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_114
-MRUItem16=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_112
-MRUItem17=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_102
-MRUItem18=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_99
-MRUItem19=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_95
-MRUItem20=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_94
-MRUItem21=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_91
-MRUItem22=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_86
-MRUItem23=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_85
-MRUItem24=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_83
-MRUItem25=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_81
-MRUItem26=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_80
-MRUItem27=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_79
-MRUItem28=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_75
-MRUItem29=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_74
+MRUItem0=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
+MRUItem1=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
+MRUItem2=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
+MRUItem3=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_3_to_Biel
+MRUItem4=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_2_to_Biel
+MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_108_to_Biel
+MRUItem6=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_123
+MRUItem7=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_120
+MRUItem8=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_119
+MRUItem9=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_117
+MRUItem10=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_116
+MRUItem11=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_114
+MRUItem12=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_112
+MRUItem13=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_102
+MRUItem14=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_99
+MRUItem15=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_95
+MRUItem16=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_94
+MRUItem17=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_91
+MRUItem18=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_86
+MRUItem19=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_85
+MRUItem20=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_83
+MRUItem21=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_81
+MRUItem22=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_80
+MRUItem23=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_79
+MRUItem24=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_75
+MRUItem25=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_74
+MRUItem26=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_73
+MRUItem27=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_72
+MRUItem28=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_69
+MRUItem29=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
